--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First-Assignment</title>
     <link rel="stylesheet" href="styles/assignment.css">
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
-<body background="images/banner/banner3.png">
-    
+<body background="images/banner/banner2.png">
+    <div class="banner">
+        <h1 class="banner-title">All Thinks Are Possible If You believe</h1>
+        <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+        <button class="btn-primary">Contact us</button>
+    </div>
 </body>
 </html>
