--- a/index.html
+++ b/index.html
@@ -11,10 +11,18 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body background="images/banner/banner2.png">
-    <div class="banner">
-        <h1 class="banner-title">All Thinks Are Possible If You believe</h1>
-        <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
-        <button class="btn-primary">Contact us</button>
+   <header>
+    <nav class="nav-title">
+        <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Services</li>
+        </ul>
+    </nav>
+    <div>
+        <h3 class="banner-title">All Thinks Are Possible If You believe</h3>
     </div>
+   </header>
+    
 </body>
 </html>
