--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
    <header>
     <nav class="nav-title">
         <ul>
-            <li>Home</li>
+            <li class="nav-sub-title">Home</li>
             <li>About</li>
             <li>Services</li>
         </ul>
     </nav>
-    <div>
+    <div class="banner">
         <h3 class="banner-title">All Thinks Are Possible If You believe</h3>
+        <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+        <button class="btn-primary">Contact Us</button>
     </div>
    </header>
     
