--- a/index.html
+++ b/index.html
@@ -10,21 +10,34 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
-<body background="images/banner/banner2.png">
-   <header>
-    <nav class="nav-title">
-        <ul>
-            <li class="nav-sub-title">Home</li>
-            <li>About</li>
-            <li>Services</li>
-        </ul>
-    </nav>
-    <div class="banner">
-        <h3 class="banner-title">All Thinks Are Possible If You believe</h3>
-        <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
-        <button class="btn-primary">Contact Us</button>
+<div class="banner-image">
+<img src="images/banner/banner2.png" alt="">
+
+</div>
+   
+    <header>
+        <nav class="nav-title">
+            <ul>
+                <li class="nav-sub-title">Home</li>
+                <li>About</li>
+                <li>Services</li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <h3 class="banner-title">All Thinks Are Possible If You believe</h3>
+            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+            <button class="btn-primary">Contact Us</button>
+        </div>
+       </header>
+   </section>
+   <section>
+    <div class="previous-experiences">
+      <img src="images/person.png" alt="">
     </div>
-   </header>
+    <div class="experience-title">
+        <h4>My failures of previous year</h4>
+    </div>
+   </section>
     
 </body>
 </html>
