--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="styles/assignment.css">
 </head>
 <body>
     
@@ -19,13 +20,7 @@
 </div>
    
     <header>
-        <nav class="nav-title">
-            <ul>
-                <li class="nav-sub-title">Home</li>
-                <li>About</li>
-                <li>Services</li>
-            </ul>
-        </nav>
+       
         <div class="banner">
             <h3 class="banner-title">All Thinks Are Possible If You believe</h3>
             <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
@@ -58,8 +53,23 @@
         <div class="my-plan-container">
             <div class="skill-in-fututre">
                 <img class="picture-one" src="images/icons/web.png" alt="">
-                <h4 class="skill-title">Web Development</h4>
-                <p class="skill-description">I want to start</p>
+                <h4 class="skill-title-one">Web Development</h4>
+                <p class="skill-description-one">I want to start</p>
+            </div>
+            <div class="skill-in-fututre">
+                <img class="picture-two" src="images/icons/js.png" alt="">
+                <h4 class="skill-title-two">Javascript</h4>
+                <p class="skill-description-two">I want to learn</p>
+            </div>
+            <div class="skill-in-fututre">
+                <img class="picture-three" src="images/icons/smoke.png" alt="">
+                <h4 class="skill-title-three">Smoking Habit</h4>
+                <p class="skill-description-three">I want to end</p>
+            </div>
+            <div class="skill-in-fututre">
+                <img class="picture-four" src="images/icons/ecom.png" alt="">
+                <h4 class="skill-title-four">ecommerce</h4>
+                <p class="skill-description-four">I want to learn</p>
             </div>
         </div>
    </section>
