--- a/index.html
+++ b/index.html
@@ -73,7 +73,12 @@
             </div>
         </div>
    </section>
-   
+   <section>
+    <div class="gradient">
+      
+      <h1>Awlays keep a positive mindset</h1>
+    </div>
+   </section>
 </main>
     <footer>
 
