--- a/index.html
+++ b/index.html
@@ -77,11 +77,21 @@
     <div class="gradient">
       
       <h1>Awlays keep a positive mindset</h1>
+      <button class="btn">call now</button>
     </div>
    </section>
 </main>
-    <footer>
-
+<!-- footer section -->
+    <footer class="footer-section">
+           <div class="footer-content">
+            <h1 class="footer-title">Future</h1>
+            <p class="footer-describtion">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+            <p class="mail">Email : info@gmail.com</p>
+            <p class="phn">Phone : 01500 00 00 00</p>
+            <a href="">
+                <img class="first-img" src="images/icons/fb.png" alt="">
+            </a>
+           </div>
     </footer>
 </body>
 </html>
