--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="styles/assignment.css">
+
 </head>
 <body>
     
@@ -82,6 +82,7 @@
    </section>
 </main>
 <!-- footer section -->
+<section class="content">
     <footer class="footer-section">
            <div class="footer-content">
             <h1 class="footer-title">Future</h1>
@@ -91,7 +92,21 @@
             <a href="">
                 <img class="first-img" src="images/icons/fb.png" alt="">
             </a>
+            <a href="">
+                <img class="second-img" src="images/icons/twitter.png" alt="">
+            </a>
+            <a href="">
+                <img class="third-img" src="images/icons/youtube.png" alt="">
+            </a>
            </div>
+    <div>
+        <h2 class="contact-title">Subscribe</h2>
+        <form class="contact-mail" action="">
+            <input type="email" name="" id="" placeholder=" Your email">
+        </form>
+        <button class="btn-two">Subscribe</button>
+    </div>
     </footer>
+    </section>
 </body>
 </html>
